# capstone

./: .gitignore  Finetuning.md  analyze.py  batched_2-shot_results.csv  chat.py  ckpr_inference.py  ckpr_ins.py  download_dataset.py  download_model.sh  herald_inference_results_corrected.json  inference.py  inspect_params.py  investigate_ds.py  lean_inference.py  lean_inference1.py  lean_inference2.py  main.py  minif2f_results_valid_3-shot_host_0.csv  minif2f_results_valid_3-shot_host_1.csv  minif2f_valid_3-shot.json  minif2f_valid_3-shot_host_0.jsonl  minif2f_valid_3-shot_host_1.json  minif2f_valid_3-shot_host_1.jsonl  pyproject.toml  tagged_2-shot_results.csv  tpu_profiler.py
2b-it/: download_model.sh
evals/: batched_eval.py  few_shot.py  few_shot1.py  full_eval.py  hearld4_eval.py  miniF2F_eval.py  miniF2F_eval1.py  unified_eval.py
evals/instruct/: miniF2F_eval.py
evals/instruct/results/: minif2f_valid_3-shot_instruct.json  minif2f_valid_3-shot_instruct_host_1.jsonl
finetuning/: config.py  data_pipeline.py  pretokenize_dataset.py  sharding.py  train.py  train1.py
lean_verifier/: LeanVerifier.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
utils/: model_loader.py
