[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "capstone"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets",
  "pandas",
  "matplotlib",
  "seaborn",
  "recurrentgemma",
  "flax",
  "jax[tpu]",
  "pydeps>=3.0.1",
  "ruff>=0.11.13",
  "tensorflow>=2.19.0",
  "tensorflow-datasets>=4.9.9",
  "torch>=2.7.1",
]

[tool.setuptools]
# list each top-level .py (without the .py suffix)
py-modules = [
  "chat",
  "download_dataset",
  "inference",
  "investigate_ds",
  "lean_inference",
  "main",
  "utils",
  "finetuning"

]
